public/style.css
* {
  margin: 0px;
  padding: 0px;
}

@font-face {
font-family: "Abaddon";
src: url("fonts/abaddon.ttf") format("ttf");
}

@font-face {
font-family: "Cyrodiil";
src: url("fonts/Cyrodiil.otf") format("otf");
}

a{
  text-decoration: none;
}

h2, a, label{
  font-family: Abaddon;
  color: #512e13;
}

p, input, select, textarea{
  font-family: Cyrodiil;
  color: #512e13;
}

body{
  background-color: #fff6db;
}



/* main navigation sidebar */


.sidenav {
  height: 100%;
  width: 20%;
  position: fixed;
  padding: 2%;
  background-color: #08080A;
}

.sidenav ul {
  height:90%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-bottom: 1%;
}


.logo {
  height: 100%;
  width: 100%;
  object-fit: contain;
}

.nav-link{
  text-decoration: none;
}

.nav-link:hover{
  text-decoration: none;
}


.nav-link  p{
  color: #F3E0A0;
}

.nav-link p:hover {
  color: #E8D658;
}

main{
  margin-left: 24%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}


figure.nav-icon p {
  font-family: Abaddon;
  margin-top: 1%;
}

figure.nav-icon img{
  height: 50px;
  width: 50px;
  object-fit: contain;
}



figure.nav-icon {
  text-align: center;
  overflow: hidden;
}

textarea {
    resize: none;
}

/* Create cards for display items*/
.card {
  border-radius: 2%;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  width: 20%;
  height: 20%;
  margin:3%;
  padding-left:2%;
  padding-right:2%;
  padding-bottom:2%;
  background-color: #F3E0A0;
  color: #512e13;
  display: flex;
  flex-direction: column;
}
.card a h2{
  color: #2c8ecc;
}

.card a:hover{
  text-decoration: underline;
  color: #2c8ecc;
}

.card img{
  width:100%;
  border-radius: 2%;
}

.card h2{
  font-size: 1.25em;
}


.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.delete-btn {
  padding-top: 5px;
  padding-bottom: 5px;
  align-self: flex-start;
}

/* align text in tables to tob left */
td{
  vertical-align: top;
  text-align: left;
}

/* Form styling */
td.btn {
  text-align: center;
}

td.btn input {
  width: 30%;
}

form td{
  padding-top: 1%;
}

form {
  margin: 2%;
  padding: 2%;
  background-color: #F3E0A0;
  border-radius: 2%;
}

.form-title{
  text-align: center;
}

input[type=number], input[type=text]{
  padding-left: 1%;
  padding-right: 1%;
}

textarea{
  padding: 1%;
}

/* formatting for low stock and out of stock */
p.low-stock{
  color: DarkOrange;
}

p.out-of-stock{
  color: FireBrick;
}

